--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
