--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ "develop", "main" ]
+    branches: [ "main", "develop" ]
 
 jobs:
   laravel-tests:
@@ -13,7 +13,7 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.1'
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
@@ -26,11 +26,18 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+        
+    - name: Installing Package.json
+      run: npm install
+      
+    - name: Build Assets
+      run: npm run build
+        
     - name: Execute tests (Unit and Feature tests) via PEST
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: php artisan test --parallel
       
-  - name: Execute Laravel Pint
+    - name: Execute Laravel Pint
       run: vendor/bin/pint --test
